--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -13,8 +13,8 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 content-wrapper">
                     <form class="form-login" th:action="@{/login}" method="POST">
-                        <div class="panel panel-default text-center">
-                            <div class="panel-heading" ><img src="/img/logo.png"/></div>
+                        <div class="panel panel-default text-center panel-defaul-login">
+                            <div class="panel-heading panel-heading-login" ><img src="/img/logo.png"/></div>
                             <div class="panel-body" id="form-nome-login">Projeto Crescer </div>
                         </div>
                         <div class="alert alert-danger" th:if="${param.error}">
